GNOME Bugzilla – Bug 641059
Fix several bugs handling GtkTrayIcon symbolic colors
Last modified: 2011-02-01 00:14:07 UTC
working on applying the patch from bug 614711 to gnome-shell to fix the coloring of gpk-update-icon, but ran into several problems. Not sure that the manual g_object_notify()ing on the trayicon is the best fix for initializing the colors, but it was the simplest.
Created attachment 179730 [details] [review] Fix several bugs handling GtkTrayIcon symbolic colors
Thanks, applied