Fix several bugs handling GtkTrayIcon symbolic colors

https://bugzilla.gnome.org/show_bug.cgi?id=641059